force-app/main/default/objects/AccountDebtSum__c/AccountDebtSum__c.object-meta.xml
<CustomObject>
    <label>Account Debt Sum</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Account Debt Sum Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Debt Sum</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>