force-app/main/default/objects/AccountDebtSum__c/fields/DebtType__c.field-meta.xml
<CustomField>
    <fullName>DebtType__c</fullName>
    <label>Debt Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>